# book-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  build.sh  pyproject.toml
.github/workflows/: ci.yml
src/: fb2_to_typst.py  template.typ
src/book_converter/: __init__.py  batch.py  cli.py  config.py  ir.py
src/book_converter/fb2/: loader.py  parser.py
src/book_converter/render/: escape.py  typst.py
src/book_converter/typography/: __init__.py  base.py  english.py  registry.py  russian.py
templates/: classic.typ
templates/fonts/: OFL.txt  README.md
tests/: test_batch.py  test_cli.py  test_config.py  test_fb2_loader.py  test_fb2_parser_binaries.py  test_fb2_parser_blocks.py  test_fb2_parser_decorative.py  test_fb2_parser_footnotes.py  test_fb2_parser_inlines.py  test_fb2_parser_metadata.py  test_fb2_parser_sections.py  test_fb2_to_typst.py  test_integration_smoke.py  test_ir.py  test_render_binaries.py  test_render_blocks.py  test_render_escape.py  test_render_footnotes.py  test_render_inlines.py  test_render_sections.py  test_template_smoke.py  test_typography_base.py  test_typography_english.py  test_typography_russian.py
tests/fixtures/: epigraph_cite_poem.fb2  flat_minimal.fb2  footnotes.fb2  images.fb2  inline_formatting.fb2  metadata_full.fb2  nested_sections.fb2
