[project]
name = "book-converter"
version = "0.2.0"
description = "Universal FB2 → beautiful PDF converter"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "pydantic>=2.6",
]

[project.scripts]
book-converter = "book_converter.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke typst compile and produce real PDFs",
]
