[project]
name = "book-converter"
version = "1.0.0"
description = "Universal FB2 → beautiful PDF converter with book-grade Russian/English typography, built on Typst."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maxim Gundyrev", email = "gundyrevmaxim@gmail.com" }]
keywords = ["fb2", "pdf", "typst", "typography", "book", "ebook", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Printing",
    "Typing :: Typed",
]
dependencies = [
    "defusedxml>=0.7.1",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/maxyotka/book-converter"
Repository = "https://github.com/maxyotka/book-converter"
Issues = "https://github.com/maxyotka/book-converter/issues"
Changelog = "https://github.com/maxyotka/book-converter/blob/main/CHANGELOG.md"

[project.scripts]
book-converter = "book_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_converter"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke typst compile and produce real PDFs",
]
